# libcli

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .prettierrc.yml  README.md  meson.build  meson_options.txt  package.json
.github/workflows/: builds.yaml  markdownlint.yaml  prettier.yaml  release.yaml  reuse.yaml
.reuse/: dep5
examples/: meson.build  reuse.c
include/: meson.build
include/libcli/: output.h  parser.h  program.h
lib/: meson.build  output.c  parser.c  program.c  util.h
subprojects/: libmerr.wrap
tests/: meson.build  output-test.c  parser-test.c  program-test.c
